--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
          Matan Ostrovsky (PhD, 2023 - today),
          Yoav Gelberg (PhD, 2024-today, joint supervision with Michael Bronstein),
          Ran Elbaz (Msc, 2023-today),
-         Ofir Haim (MSc, 2023-today, joint supervision with Shie Mannor),
+         Ofir Haim (MSc, 2023-2025, joint supervision with Shie Mannor),
          Yaniv Galron (MSc, 2023-today, joint supervision with Eran Treister),
-         Edan Kinderman (MSc, 2023-today, joint supervision with Daniel Soudry),
-         Yuval Aidan (MSc, 2023-today, joint supervision with Ayellet Tal).<br>
+         Edan Kinderman (MSc, 2023-2025, joint supervision with Daniel Soudry),
+         Yuval Aidan (MSc, 2023-2025, joint supervision with Ayellet Tal).<br>
          <b>Close student / postdoc collaborators:</b>
          Beatrice Bevilacqua (2021-today),
          Derek Lim (2021-today),
@@ -112,6 +112,7 @@
                 <p>
                 <h4>News</h4>
                 <ul>
+                <li> 3 papers accepted to ICLR 2025.</li>
                 <li> 4 papers accepted to NeurIPS 2024.</li>
                 <li> Proud to be the recipient of the <a href='https://che.org.il/en/scholarships-integration-outstanding-faculty/'>Alon scholarship for the Integration of Outstanding Faculty</a>.
                 <li> 5 papers accepted to ICML 2024.</li>
@@ -128,6 +129,8 @@
                 <p>
                 <h4>Teaching</h4>
                 <ul>
+                <li>2025/Spring (Technion):   Introduction to Machine Learning </li>
+                <li>2025/Spring (Technion):   Deep Learning and groups </li>
                 <li>2024/winter (Technion):   Topics in learning on graphs </li>
                 <li>2024/Spring (Technion):   Deep Learning and groups </li>
                 <li>2023/winter (Technion):   Topics in learning on graphs </li>
@@ -160,7 +163,6 @@
         </div>
       </div>
 
-
       <!--Open problems -->
          <div class="row" id="templatemo_publications_LargeScaleBD">
              <div class="col-md-1"></div>
@@ -173,12 +175,63 @@
                  <p>
                    Yam Eitan, Yoav Gelberg, Guy Bar-Shalom, Fabrizio Frasca, Michael Bronstein, Haggai Maron <br>
 
-                   <i>Technical report  </i> <br> </p>
+                   <i>International Conference on Learning Representations (ICLR) 2024</i> <br>
                  <a class="btn btn-default abstract" ptitle="Topological deep learning (TDL) facilitates learning from data represented by topological structures. The primary model utilized in this setting is higher-order message-passing (HOMP), which extends traditional graph message-passing neural networks (MPNN) to diverse topological domains. Given the significant expressivity limitations of MPNNs, our paper aims to explore both the strengths and weaknesses of HOMP's expressive power and subsequently design novel architectures to address these limitations. We approach this from several perspectives: First, we demonstrate HOMP's inability to distinguish between topological objects based on fundamental topological and metric properties such as diameter, orientability, planarity, and homology. Second, we show HOMP's limitations in fully leveraging the topological structure of objects constructed using common lifting and pooling operators on graphs. Finally, we compare HOMP's expressive power to hypergraph networks, which are the most extensively studied TDL methods. We then develop two new classes of TDL models: multi-cellular networks (MCN) and scalable multi-cellular networks (SMCN). These models draw inspiration from expressive graph architectures. While MCN can reach full expressivity but is highly unscalable, SMCN offers a more scalable alternative that still mitigates many of HOMP's expressivity limitations. Finally, we construct a synthetic dataset, where TDL models are tasked with separating pairs of topological objects based on basic topological properties. We demonstrate that while HOMP is unable to distinguish between any of the pairs in the dataset, SMCN successfully distinguishes all pairs, empirically validating our theoretical findings. Our work opens a new design space and new opportunities for TDL, paving the way for more expressive and versatile models."> Abstract</a>
-                 <a href="https://arxiv.org/pdf/2408.05486" class="btn btn-default">Paper </a>
+                 <a href="https://openreview.net/forum?id=EzjsoomYEb" class="btn btn-default">Paper </a>
 
              </div>
       </div><!-- end of row -->
+
+
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/spectral_homom/rep.png" width="450" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Homomorphism Expressivity of Spectral Invariant Graph Neural Networks</h2>
+                 <p>
+                   Jingchu Gai, Yiheng Du, Bohang Zhang, Haggai Maron, Liwei Wang <br>
+
+                   <i>International Conference on Learning Representations (ICLR) 2024</i> <br>
+                 <a class="btn btn-default abstract" ptitle="Graph spectra are an important class of structural features on graphs that have shown promising results in enhancing Graph Neural Networks (GNNs). Despite their widespread practical use, the theoretical understanding of the power of spectral invariants --- particularly their contribution to GNNs --- remains incomplete. In this paper, we address this fundamental question through the lens of homomorphism expressivity, providing a comprehensive and quantitative analysis of the expressive power of spectral invariants. Specifically, we prove that spectral invariant GNNs can homomorphism-count exactly a class of specific tree-like graphs which we refer to as \emph{parallel trees}. We highlight the significance of this result in various contexts, including establishing a quantitative expressiveness hierarchy across different architectural variants, offering insights into the impact of GNN depth, and understanding the subgraph counting capabilities of spectral invariant GNNs. In particular, our results significantly extend \citet{arvind2024hierarchy} and settle their open questions. Finally, we generalize our analysis to higher-order GNNs and answer an open question raised by \citet{zhang2024expressive}."> Abstract</a>
+                 <a href="https://openreview.net/forum?id=rdv6yeMFpn" class="btn btn-default">Paper </a>
+
+             </div>
+      </div><!-- end of row -->
+
+
+
+
+
+
+
+
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/lightning-fast/rep.png" width="450" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Lightning-Fast Image Inversion and Editing for Text-to-Image Diffusion Models</h2>
+                 <p>
+                   Dvir Samuel, Barak Meiri, Haggai Maron, Yoad Tewel, Nir Darshan, Shai Avidan, Gal Chechik, Rami Ben-Ari <br>
+
+                   <i>International Conference on Learning Representations (ICLR) 2024</i> <br>
+                 <a class="btn btn-default abstract" ptitle="Diffusion inversion is the problem of taking an image and a text prompt that describes it and finding a noise latent that would generate the exact same image. Most current deterministic inversion techniques operate by approximately solving an implicit equation and may converge slowly or yield poor reconstructed images. We formulate the problem by finding the roots of an implicit equation and design a method to solve it efficiently. Our solution is based on Newton-Raphson (NR), a well-known technique in numerical analysis. We show that a vanilla application of NR is computationally infeasible while naively transforming it to a computationally tractable alternative tends to converge to out-of-distribution solutions, resulting poor reconstruction and editing. We therefore derive an efficient guided formulation that fastly converges and provides high-quality reconstructions and editing. We showcase our method on real image editing with three popular open-sourced diffusion models: Stable Diffusion, SDXL-Turbo and Flux with different deterministic schedulers. Our solution, Guided Newton-Raphson Inversion, inverts an image within 0.4 sec (on an A100 GPU) for few-step models (SDXL-Turbo and Flux.1), opening the door for interactive image editing. We further show improved results in image interpolation and generation of rare objects."> Abstract</a>
+                 <a href="https://openreview.net/forum?id=t9l63huPRt" class="btn btn-default">Paper </a>
+
+             </div>
+      </div><!-- end of row -->
+
+
+
+
+
       <!--Open problems -->
          <div class="row" id="templatemo_publications_LargeScaleBD">
              <div class="col-md-1"></div>
