--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="col-md-16">
                 <h2>Haggai Maron</h2>
 				<p>
-          I am an Assistant Professor at the <a href="https://vee.technion.ac.il/"> Faculty of Electrical and Computer Engineering at the Technion</a> and a senior research scientist at <a href="https://www.nvidia.com/en-us/research/">NVIDIA Research</a> at <a href="https://research.nvidia.com/labs/par/">NVIDIA's lab in Tel Aviv</a>.
+          I am an Assistant Professor and the Robert J. Shillman Fellow at the <a href="https://vee.technion.ac.il/"> Faculty of Electrical and Computer Engineering at the Technion</a> and a senior research scientist at <a href="https://www.nvidia.com/en-us/research/">NVIDIA Research</a> at <a href="https://research.nvidia.com/labs/par/">NVIDIA's lab in Tel Aviv</a>.
           My primary research interest is in machine learning, with a focus on deep learning for structured data. Specifically, I study how to apply deep learning techniques to sets, graphs, point clouds, surfaces, weight spaces and other mathematical objects that have an inherent symmetry structure. My goal is twofold: first, to understand and design deep learning architectures from a theoretical perspective, for example, by analyzing their expressive power; and second, to demonstrate their practical effectiveness on real-world problems involving structured data.
           I completed my Ph.D. in 2019 at the Weizmann Institute of Science under the supervision of <a href="http://www.wisdom.weizmann.ac.il/~ylipman/">Prof. Yaron Lipman</a>. </br>
           <!--I serve as a reviewer for NeurIPS, ICML, ICCV, SIGGRAPH, SIGGRAPH Asia and ACM TOG.<br>-->
