--- a/index.html
+++ b/index.html
@@ -91,24 +91,27 @@
 				<p>
 				<b>Email:</b> hmaron (at) nvidia.com, <a href="https://scholar.google.co.il/citations?user=4v8uJrIAAAAJ">Google scholar page</a>, <a href="https://github.com/Haggaim">GitHub page</a><br>
         <p>
-        <h4>Group</h4>
-         Fabrizio Frasca (Postdoc, 2024-today),
-         Yam Eitan (PhD, 2024 - today),
-         Guy Bar-Shalom (PhD, 2023 - today, joint supervision with Ran El-Yaniv),
-         Matan Ostrovsky (PhD, 2023 - today),
-         Yoav Gelberg (PhD, 2024-today, joint supervision with Michael Bronstein),
-         Ran Elbaz (Msc, 2023-today),
-         Ofir Haim (MSc, 2023-2025, joint supervision with Shie Mannor),
-         Yaniv Galron (MSc, 2023-today, joint supervision with Eran Treister),
-         Edan Kinderman (MSc, 2023-2025, joint supervision with Daniel Soudry),
-         Yuval Aidan (MSc, 2023-2025, joint supervision with Ayellet Tal).<br>
-         <b>Close student / postdoc collaborators:</b>
-         Beatrice Bevilacqua (2021-today),
-         Derek Lim (2021-today),
-         Moshe Eliasof (2022-today),
-         Aviv Navon (2021-today),
-         Aviv Shamsian (2022-today).
-				</p>
+            <h4>Group</h4>
+            <b>Current Group Members:</b>
+            <span class="member"><a href="https://noired.github.io/">Fabrizio Frasca</a> (Postdoc, 2024-today),</span>
+            <span class="member"><a href="https://scholar.google.com/citations?user=INF2QpcAAAAJ&hl=iw">Yam Eitan</a> (PhD, 2024 - today),</span>
+            <span class="member"><a href="https://barsguy.github.io/">Guy Bar-Shalom</a> (PhD, 2023 - today, joint supervision with <a href="https://csaws.cs.technion.ac.il/~rani/">Ran El-Yaniv</a>),</span>
+            <span class="member"><a href="https://scholar.google.co.il/citations?user=iS3AYtAAAAAJ&hl=iw">Matan Ostrovsky</a> (PhD, 2023 - today),</span>
+            <span class="member"><a href="https://yoavgelberg.github.io/">Yoav Gelberg</a> (PhD, 2024-today, joint supervision with <a href="https://www.cs.ox.ac.uk/people/michael.bronstein/">Michael Bronstein</a>),</span>
+            <span class="member">Ran Elbaz (Msc, 2023-today),</span>
+            <span class="member">Yaniv Galron (MSc, 2023-today, joint supervision with <a href="https://www.cs.bgu.ac.il/~erant/">Eran Treister</a>)</span><br>
+            <b>Past Group Members:</b>
+            <span class="member">Yuval Aidan (MSc, 2023-2025, joint supervision with <a href="https://webee.technion.ac.il/Sites/People/ayellet/">Ayellet Tal</a>).</span><br>
+            <span class="member">Edan Kinderman (MSc, 2023-2025, joint supervision with <a href="https://soudry.github.io/">Daniel Soudry</a>),</span>
+            <span class="member">Ofir Haim (MSc, 2023-2025, joint supervision with <a href="https://webee.technion.ac.il/Sites/People/shie/">Shie Mannor</a>)</span><br>
+            <b>Close student / postdoc collaborators:</b>
+            <span class="member"><a href="https://sites.google.com/berkeley.edu/moeputterman/home?authuser=0">Theo (Moe) Putterman</a> (UC Berkeley, 2023-today),</span>
+            <span class="member"><a href="https://beabevi.github.io/">Beatrice Bevilacqua</a> (PhD Candidate, Purdue University, 2021-today),</span>
+            <span class="member"><a href="https://cptq.github.io/about/">Derek Lim</a> (PhD student, MIT CSAIL, 2021-today),</span>
+            <span class="member"><a href="https://scholar.google.com/citations?user=44LKqBsAAAAJ&hl=iw">Moshe Eliasof</a> (Postdoc, University of Cambridge, 2022-today),</span>
+            <span class="member"><a href="https://avivnavon.github.io/">Aviv Navon</a> (Aiola, 2021-today),</span>
+            <span class="member"><a href="https://avivsham.github.io/">Aviv Shamsian</a> (Aiola, 2022-today).</span>
+        </p>
                 <p>
                 <h4>News</h4>
                 <ul>
