--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
           I am seeking highly motivated Ph.D. students to join my new lab at the Technion. My research combines machine learning, and some aspects of algebra and graph theory, so knowledge and/or interest in these fields are a big plus.
           Coding skills are also required. -->
 
-          You can get an idea of what I am working on by taking a look at these three recent talks I gave:
+          You can get an idea of what I am working on by taking a look at these talks I gave:
           <ul>
+            <li> <a href='https://youtu.be/ENW8T59-_eE?t=2728'>The expressive power of GNNs - short tutorial</a> at the Simons Institute.
+
             <li><a href='https://www.youtube.com/watch?v=B9xFem6_ckQ&t=8182s'>Equivaraint architectures for learning in deep weight spaces </a></li>
 
           <li><a href='https://library.cirm-math.fr/Record.htm?idlist=1&record=19280739124910089119'>Subgraph-based networks for expressive, efficient, and domain-independent graph learning </a></li>
@@ -96,7 +98,6 @@
             <span class="member"><a href="https://noired.github.io/">Fabrizio Frasca</a> (Postdoc, 2024-today),</span>
             <span class="member"><a href="https://scholar.google.com/citations?user=INF2QpcAAAAJ&hl=iw">Yam Eitan</a> (PhD, 2024 - today),</span>
             <span class="member"><a href="https://barsguy.github.io/">Guy Bar-Shalom</a> (PhD, 2023 - today, joint supervision with <a href="https://csaws.cs.technion.ac.il/~rani/">Ran El-Yaniv</a>),</span>
-            <span class="member"><a href="https://scholar.google.co.il/citations?user=iS3AYtAAAAAJ&hl=iw">Matan Ostrovsky</a> (PhD, 2023 - today),</span>
             <span class="member"><a href="https://yoavgelberg.github.io/">Yoav Gelberg</a> (PhD, 2024-today, joint supervision with <a href="https://www.cs.ox.ac.uk/people/michael.bronstein/">Michael Bronstein</a>),</span>
             <span class="member">Ran Elbaz (Msc, 2023-today),</span>
             <span class="member">Yaniv Galron (MSc, 2023-today, joint supervision with <a href="https://www.cs.bgu.ac.il/~erant/">Eran Treister</a>)</span><br>
@@ -106,8 +107,8 @@
             <span class="member">Ofir Haim (MSc, 2023-2025, joint supervision with <a href="https://webee.technion.ac.il/Sites/People/shie/">Shie Mannor</a>)</span><br>
             <b>Close student / postdoc collaborators:</b>
             <span class="member"><a href="https://sites.google.com/berkeley.edu/moeputterman/home?authuser=0">Theo (Moe) Putterman</a> (UC Berkeley, 2023-today),</span>
-            <span class="member"><a href="https://beabevi.github.io/">Beatrice Bevilacqua</a> (PhD Candidate, Purdue University, 2021-today),</span>
-            <span class="member"><a href="https://cptq.github.io/about/">Derek Lim</a> (PhD student, MIT CSAIL, 2021-today),</span>
+            <span class="member"><a href="https://beabevi.github.io/">Beatrice Bevilacqua</a> (PhD Candidate, Purdue University, 2021-2025),</span>
+            <span class="member"><a href="https://cptq.github.io/about/">Derek Lim</a> (PhD student, MIT CSAIL, 2021-2025),</span>
             <span class="member"><a href="https://scholar.google.com/citations?user=44LKqBsAAAAJ&hl=iw">Moshe Eliasof</a> (Postdoc, University of Cambridge, 2022-today),</span>
             <span class="member"><a href="https://avivnavon.github.io/">Aviv Navon</a> (Aiola, 2021-today),</span>
             <span class="member"><a href="https://avivsham.github.io/">Aviv Shamsian</a> (Aiola, 2022-today).</span>
@@ -115,7 +116,7 @@
                 <p>
                 <h4>News</h4>
                 <ul>
-                <li>See my recent bootcamp talk on <a href='https://youtu.be/ENW8T59-_eE?t=2728'>the expressive power of GNNs</a> at the <a href='https://simons.berkeley.edu/workshops/graph-learning-meets-theoretical-computer-science/videos#simons-tabs'>  Graph Learning Meets Theoretical Computer Science workshop  </a> we organized at the Simons Institute.
+                <li>See my recent short tutorial on <a href='https://youtu.be/ENW8T59-_eE?t=2728'>the expressive power of GNNs</a> at the <a href='https://simons.berkeley.edu/workshops/graph-learning-meets-theoretical-computer-science/videos#simons-tabs'>  Graph Learning Meets Theoretical Computer Science workshop  </a> we organized at the Simons Institute.
                 <li> Proud to be the recipient of the <a href='https://che.org.il/en/scholarships-integration-outstanding-faculty/'>Alon scholarship for the Integration of Outstanding Faculty</a>.
                 <li> See my recent talk on <a href='https://www.youtube.com/watch?v=B9xFem6_ckQ&t=8182s'>Equivaraint architectures for learning in deep weight spaces </a>. </li>
                 <li> A new <a href='https://developer.nvidia.com/blog/designing-deep-networks-to-process-other-deep-networks/'> blog post on Equivaraint architectures for learning in deep weight spaces </a>. </li>
