--- a/index.html
+++ b/index.html
@@ -315,6 +315,46 @@
          <div class="row" id="templatemo_publications_LargeScaleBD">
              <div class="col-md-1"></div>
              <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/heat/rep.png" width="450" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Directed Graph Generation with Heat Kernels</h2>
+                 <p>
+                   Marc T Law, Karsten Kreis, Haggai Maron <br>
+
+                   <i>TMLR 2025</i> <br>
+                 <a class="btn btn-default abstract" ptitle="Existing work on graph generation has, so far, mainly focused on undirected graphs. In this paper we propose a denoising autoencoder-based generative model that exploits the global structure of directed graphs (also called digraphs) via their Laplacian dynamics and enables one-shot generation. Our noising encoder uses closed-form expressions based on the heat equation to corrupt its digraph input with uniform noise. Our decoder reconstructs the corrupted representation by exploiting the global topological information of the graph included in its random walk Laplacian matrix. Our approach generalizes a special class of exponential kernels over discrete structures, called diffusion kernels or heat kernels, to the non-symmetric case via Reproducing Kernel Banach Spaces (RKBS). This connection with heat kernels provides us with a geometrically motivated algorithm related to Gaussian processes and dimensionality reduction techniques such as Laplacian eigenmaps. It also allows us to interpret and exploit the eigenproperties of the Laplacian matrix. We provide an experimental analysis of our approach on different types of synthetic datasets and show that our model is able to generate directed graphs that follow the distribution of the training dataset even if it is multimodal."> Abstract</a>
+                 <a href="https://openreview.net/forum?id=60Gi1w6hte" class="btn btn-default">Paper </a>
+
+
+             </div>
+      </div><!-- end of row -->
+
+
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/foldable/rep.png" width="450" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Foldable supernets: Scalable merging of transformers with different initializations and tasks</h2>
+                 <p>
+                   Edan Kinderman, Itay Hubara, Haggai Maron, Daniel Soudry <br>
+
+                   <i>TMLR 2025</i> <br>
+                 <a class="btn btn-default abstract" ptitle="Many recent methods aim to merge neural networks (NNs) with identical architectures trained on different tasks to obtain a single multi-task model. Most existing works tackle the simpler setup of merging NNs initialized from a common pre-trained network, where simple heuristics like weight averaging work well. This work targets a more challenging goal: merging large transformers trained on different tasks from distinct initializations. First, we demonstrate that traditional merging methods fail catastrophically in this setup. To overcome this challenge, we propose Foldable SuperNet Merge (FS-Merge), a method that optimizes a SuperNet to fuse the original models using a feature reconstruction loss. FS-Merge is simple, data-efficient, and capable of merging models of varying widths. We test FS-Merge against existing methods, including knowledge distillation, on MLPs and transformers across various settings, sizes, tasks, and modalities. FS-Merge consistently outperforms them, achieving SOTA results, particularly in limited data scenarios."> Abstract</a>
+                 <a href="https://arxiv.org/abs/2410.01483" class="btn btn-default">Paper </a>
+
+
+             </div>
+      </div><!-- end of row -->
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
                  <img src="projects/LOS/rep.png" width="450" " alt="">
              </div>
              <div class="col-md-1"></div>
@@ -332,6 +372,7 @@
 
              </div>
       </div><!-- end of row -->
+
 
 
 
